# Quantum-Sinusoidal-Kolmogorov-Arnold-Networks-for-High-Energy-Physics

./: .gitignore  LICENSE  README.md  config.yaml  download_data.sh  main.py  pyproject.toml
.github/: pull_request_template.md
libs/pykan/: CONTRIBUTIONS_AND_MODIFICATIONS.md  README.md  logic_modifications.diff  pyproject.toml  requirements.txt
libs/pykan/docs/: community.rst  conf.py  demos.rst  examples.rst  index.rst  interp.rst  intro.ipynb  intro.rst  kan.rst  modules.rst  physics.rst
libs/pykan/docs/API_demo/: API_10_device.ipynb  API_10_device.rst  API_11_create_dataset.rst  API_12_checkpoint_save_load_model.ipynb  API_12_checkpoint_save_load_model.rst  API_1_indexing.rst  API_2_plotting.ipynb  API_2_plotting.rst  API_3_extract_activations.ipynb  API_3_extract_activations.rst  API_4_initialization.ipynb  API_4_initialization.rst  API_5_grid.ipynb  API_5_grid.rst  API_6_training_hyperparameter.rst  API_7_pruning.rst  API_8_regularization.ipynb  API_8_regularization.rst  API_9_video.ipynb
libs/pykan/docs/Community/: Community_1_physics_informed_kan.ipynb  Community_1_physics_informed_kan.rst  Community_2_protein_sequence_classification.ipynb  Community_2_protein_sequence_classification.rst
libs/pykan/kan/: KANLayer.py  MultKAN.py  utils.py
notebooks/: EDA_QG.ipynb  EDA_higgs.ipynb  EDA_top.ipynb
scripts/: download_data.sh  run_preprocessing.py  train_kan.py  verify_processor.py
src/architectures/: classic_kan.py
src/preprocessing/: processor_top.py
src/process/: processor_top.py
src/utils/: metrics.py  workspace.py
(+84 files in other folders)
