[project]
name = "qkans-ml4sci-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "seaborn>=0.13.2",
    "tables>=3.11.1",
]
