[project]
name = "qkans-ml4sci-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tables>=3.11.1",
    "torch>=2.12.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
